@startuml

title __TASKMASTER's Class Diagram__\n

  namespace  {
    namespace AO.DescriptionSubtaskDAO {
      interface DAO.DescriptionSubtaskDAO.DescriptionSubtaskDAO {
      }
    }
  }
  

  namespace  {
    namespace AO.DescriptionSubtaskDAO {
      class DAO.DescriptionSubtaskDAO.DescriptionSubtaskDAOPos {
      }
    }
  }
  

  namespace  {
    namespace AO.SubtaskDAO {
      interface DAO.SubtaskDAO.SubtaskDAO {
      }
    }
  }
  

  namespace  {
    namespace AO.SubtaskDAO {
      class DAO.SubtaskDAO.TaskDAOPosSubtask {
      }
    }
  }
  

  namespace  {
    namespace AO.TaskDAO {
      interface DAO.TaskDAO.TaskDAO {
      }
    }
  }
  

  namespace  {
    namespace AO.TaskDAO {
      class DAO.TaskDAO.TaskDAOPos {
      }
    }
  }
  

  namespace  {
    namespace om.example.taskmaster {
      class com.example.taskmaster.AddDescriptionSubtask {
      }
    }
  }
  

  namespace  {
    namespace om.example.taskmaster {
      class com.example.taskmaster.AddTask {
      }
    }
  }
  

  namespace  {
    namespace om.example.taskmaster {
      class com.example.taskmaster.DetailsTask {
      }
    }
  }
  

  namespace  {
    namespace om.example.taskmaster {
      class com.example.taskmaster.HelloApplication {
      }
    }
  }
  

  namespace  {
    namespace om.example.taskmaster {
      class com.example.taskmaster.HelloController {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.DescriptionSubtask {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Subtask {
      }
    }
  }
  

  namespace  {
    namespace odel {
      class model.Task {
      }
    }
  }
  

  DAO.DescriptionSubtaskDAO.DescriptionSubtaskDAOPos .up.|> DAO.DescriptionSubtaskDAO.DescriptionSubtaskDAO
  DAO.SubtaskDAO.TaskDAOPosSubtask .up.|> DAO.SubtaskDAO.SubtaskDAO
  DAO.TaskDAO.TaskDAOPos .up.|> DAO.TaskDAO.TaskDAO
  com.example.taskmaster.AddDescriptionSubtask .up.|> javafx.fxml.Initializable
  com.example.taskmaster.AddDescriptionSubtask o-- DAO.DescriptionSubtaskDAO.DescriptionSubtaskDAO : descriptionSubtaskDAO
  com.example.taskmaster.AddDescriptionSubtask o-- com.example.taskmaster.DetailsTask : detailsTask
  com.example.taskmaster.AddTask .up.|> javafx.fxml.Initializable
  com.example.taskmaster.AddTask o-- DAO.TaskDAO.TaskDAO : taskDAO
  com.example.taskmaster.AddTask o-- com.example.taskmaster.HelloController : helloController
  com.example.taskmaster.DetailsTask .up.|> javafx.fxml.Initializable
  com.example.taskmaster.DetailsTask o-- DAO.DescriptionSubtaskDAO.DescriptionSubtaskDAO : descriptionSubtaskDAO
  com.example.taskmaster.DetailsTask o-- DAO.SubtaskDAO.SubtaskDAO : taskDAODetails
  com.example.taskmaster.DetailsTask o-- com.example.taskmaster.AddDescriptionSubtask : addDescriptionSubtask
  com.example.taskmaster.DetailsTask o-- com.example.taskmaster.HelloController : helloController
  com.example.taskmaster.HelloApplication -up-|> javafx.application.Application
  com.example.taskmaster.HelloController .up.|> javafx.fxml.Initializable
  com.example.taskmaster.HelloController o-- DAO.DescriptionSubtaskDAO.DescriptionSubtaskDAO : descriptionSubtaskDAO
  com.example.taskmaster.HelloController o-- DAO.TaskDAO.TaskDAOPos : impl
  com.example.taskmaster.HelloController o-- DAO.SubtaskDAO.SubtaskDAO : subtaskDAO
  com.example.taskmaster.HelloController o-- model.Task : task
  com.example.taskmaster.HelloController o-- DAO.TaskDAO.TaskDAO : taskDAO
  com.example.taskmaster.HelloController o-- com.example.taskmaster.AddTask : addTaskWin
  com.example.taskmaster.HelloController o-- com.example.taskmaster.DetailsTask : detailsTask


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
